# yaap

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  argparser.c  argparser.h  yaap.c  yaap.h
example/: CMakeLists.txt  Makefile  main.c
